            - Added  "options.blast-resistant"  to not break in explosions,  "options.instant-break"  to break the block instantly when clicked, and more in demo.yml  "demo-block"
        - Added piston event functionality (push and pull)
            - Added  "options.cancel-piston-push"  ,  "options.cancel-piston-pull"  , and  "options.piston-breakable"
        - Added the  "match-states"  section inside the  "block"  section of a block definition which will change the disguised BlockData of a block if its actual BlockData matches all of the nested states
            - See the custom block  "match"  in demo.yml for more details
        - Added the optional sections  "actual-sync-states"  and  "disguised-sync-states"  which are more specific variations of  "sync-states"
            - "actual-sync-states"  is only checked when calculating syncs for server-side blocks, and  "disguised-sync-states"  is only checked when calculating blocks' disguised BlockData
            - Including both specific sections and filling them with the same states will yield the same results as the base  "sync-states"  on its own
            - See the custom block  "no-press-button"  in demo.yml for more details
            - These sections can also appear as  "sync-states2"  ,  "disguised-sync-states2"  , and  "actual-sync-states2"
                - These only apply to the second block in a custom block with a second block, and they roll back to the section without a "2" if this variant does not exist
        - Added the optional sections  "force-actual-states"  and  "force-actual-states2"  to force states onto the server-side block
            - See the custom block  "always-open-trapdoor"  for more details
        - Added a new command tab system that only shows the commands that are available to a player
            - The base /woz command will only show if a player has the new permission  "worldofzombies.command.base"  which is a child of all other command permissions

    Changes: