@@ -24,7 +24,8 @@
             - Added  "options.blast-resistant"  to not break in explosions,  "options.instant-break"  to break the block instantly when clicked, and more in demo.yml  "demo-block"
         - Added piston event functionality (push and pull)
             - Added  "options.cancel-piston-push"  ,  "options.cancel-piston-pull"  , and  "options.piston-breakable"
-        - Added the  "match-states"  section inside the  "block"  section of a block definition which will change the disguised BlockData of a block if its actual BlockData matches all of the nested states
+        - Added the  "disguised-match-states"  and  "actual-match-states"  sections inside the  "block"  section of a block definition which will change the disguised BlockData of a block if its actual BlockData matches all of the nested states
+            - "actual-match-states"  are checked when a custom block is placed, and  "disguised-match-states"  are checked whenever a custom block disguise is loaded
             - See the custom block  "match"  in demo.yml for more details
         - Added the optional sections  "actual-sync-states"  and  "disguised-sync-states"  which are more specific variations of  "sync-states"
             - "actual-sync-states"  is only checked when calculating syncs for server-side blocks, and  "disguised-sync-states"  is only checked when calculating blocks' disguised BlockData
